--- a/src/app/components/level-table/level-table.component.html
+++ b/src/app/components/level-table/level-table.component.html
@@ -1,23 +1,33 @@
 <div class="container">
-  <table class="table table-dark table-striped table-hover">
-    <thead>
-    <tr>
-      <th scope="col">Code</th>
-      <th scope="col">Description</th>
-      <th scope="col">Points</th>
-      <th scope="col">Action</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let level of levels">
-      <th scope="row">{{level.code}}</th>
-      <th scope="row">{{level.description}}</th>
-      <th scope="row">{{level.points}}</th>
-      <td>
-        <button type="button" class="btn btn-success">Edit</button>
-        <button type="button" class="btn btn-danger">Delete</button>
-      </td>
-    </tr>
-    </tbody>
-  </table>
+  <div class="card shadow my-4">
+    <div class="card-header py-3 bg-dark d-flex align-items-center justify-content-between">
+      <h6 class="m-0 fw-bold text-light">Level</h6>
+      <button class="btn btn-primary fw-bold">Create Level</button>
+    </div>
+    <div class="card-body">
+      <div class="table-responsive">
+        <table class="table table-striped table-hover">
+          <thead>
+          <tr>
+            <th scope="col" class="text-center">Code</th>
+            <th scope="col" >Description</th>
+            <th scope="col" class="text-center">Points</th>
+            <th scope="col" class="text-center">Action</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr *ngFor="let level of levels">
+            <th scope="row" class="text-center">{{level.code}}</th>
+            <th scope="row" >{{level.description}}</th>
+            <th scope="row" class="text-center">{{level.points}}</th>
+            <td class="d-flex align-content-center justify-content-center text-center">
+              <button type="button" class="btn btn-danger ">Delete</button>
+            </td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
 </div>
+
