--- a/src/app/components/competition-table/competition-table.component.html
+++ b/src/app/components/competition-table/competition-table.component.html
@@ -1,19 +1,22 @@
 <div class="container">
   <div class="card shadow my-4">
-    <div class="card-header py-3 bg-dark">
+    <div class="card-header py-3 bg-dark d-flex align-items-center justify-content-between">
       <h6 class="m-0 fw-bold text-light">Competitions</h6>
+      <button type="button" class="btn btn-primary fw-bold" data-bs-toggle="modal" data-bs-target="#competitionModal">
+        Create Competition
+      </button>
     </div>
     <div class="card-body">
       <div class="table-responsive">
       <table class="table table-bordered table-striped">
         <thead class="thead-dark">
         <tr>
-          <th>Competition</th>
-          <th>Location</th>
-          <th>Date</th>
-          <th>Time</th>
-          <th>Amount</th>
-          <th>Actions</th>
+          <th class="ps-3">Competition</th>
+          <th class="text-center">Location</th>
+          <th class="text-center">Date</th>
+          <th class="text-center">Time</th>
+          <th class="text-center">Amount</th>
+          <th class="text-center">Action</th>
         </tr>
         </thead>
         <tbody>
@@ -27,23 +30,22 @@
               </div>
             </div>
           </td>
-          <td>
+          <td class="text-center">
             <p class="fw-normal mb-0">{{competition.location}}</p>
           </td>
-          <td>
+          <td class="text-center">
             <p class="fw-normal mb-0">{{competition.date}}</p>
           </td>
-          <td>
+          <td class="text-center">
             <div class="ms-3">
               <p class="mb-0">Start Time: <span class="fw-bold">{{competition.startTime}}</span></p>
               <p class="mb-0">End Time: <span class="fw-bold">{{competition.endTime}}</span></p>
             </div>
           </td>
-          <td>
+          <td class="text-center">
             <p class="fw-normal mb-0">{{competition.amount}} DH</p>
           </td>
           <td class="d-flex justify-content-around">
-            <button type="button" class="btn btn-warning">Update</button>
             <button type="button" class="btn btn-danger">Delete</button>
           </td>
         </tr>
@@ -54,3 +56,58 @@
 
   </div>
 </div>
+
+<div class="modal fade" id="competitionModal" tabindex="-1" aria-labelledby="competitionModal" aria-hidden="true">
+
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">Competition Modal</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form (ngSubmit)="saveCompetition()">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="mb-3">
+                <label for="location-input">Location</label>
+                <input type="text" [(ngModel)]="competition.location" name="location" class="form-control" id="location-input">
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="mb-3">
+                <label for="amount-inputZip">Amount</label>
+                <input type="number" [(ngModel)]="competition.amount"  name="amount" class="form-control" id="amount-inputZip">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+              <div class="mb-3">
+                <label for="amount-inputZip">Number of Participants</label>
+                <input type="number" [(ngModel)]="competition.numberOfParticipants"  name="numberOfParticipants" class="form-control" id="number-of-participants">
+              </div>
+          </div>
+          <div class="row">
+              <div class="mb-3">
+                <label for="Date-input">Competition date </label>
+                <input type="date" [(ngModel)]="competition.date"  name="date" class="form-control" id="Date-input" />
+              </div>
+              <div class="mb-3">
+                <label for="start-time-inputCity">Start Time</label>
+                <input type="time" [(ngModel)]="competition.startTime"  name="startTime" class="form-control" id="start-time-inputCity">
+              </div>
+              <div class="mb-3">
+                <label for="end-time-inputState">End Time</label>
+                <input type="time" [(ngModel)]="competition.endTime"   name="endTime" id="end-time-inputState" class="form-control"/>
+              </div>
+          </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="submit" class="btn btn-primary">Save</button>
+            </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
