--- a/src/app/components/fish-table/fish-table.component.html
+++ b/src/app/components/fish-table/fish-table.component.html
@@ -1,8 +1,10 @@
-<div class="container">
-  <div class="card shadow my-4">
+<div class="container d-flex justify-content-center">
+  <div class="card shadow my-4 w-75">
     <div class="card-header py-3 bg-dark d-flex align-items-center justify-content-between">
       <h6 class="m-0 fw-bold text-light">Fish</h6>
-      <button class="btn btn-primary fw-bold">Create Fish</button>
+      <button type="button" class="btn btn-primary fw-bold" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        Create Fish
+      </button>
     </div>
     <div class="card-body">
       <div class="table-responsive">
@@ -38,3 +40,35 @@
   </div>
 </div>
 
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+<div class="modal-dialog modal-dialog-centered">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h1 class="modal-title fs-5" id="staticBackdropLabel">Fish Modal</h1>
+      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    </div>
+    <div class="modal-body">
+      <form (ngSubmit)="saveFish()">
+        <div class="mb-3">
+          <label class="fw-medium mb-3">Fish Name :</label>
+          <input [(ngModel)]="fish.name" name="name" type="text" class="form-control">
+        </div>
+        <div  class="mb-3">
+          <label class="fw-medium mb-2">Average Weight :</label>
+          <input [(ngModel)]="fish.averageWeight" name="averageWeight" type="number" min="0" class="form-control">
+        </div>
+        <div  class="mb-3">
+          <label class="fw-medium mb-2">Level :</label>
+          <input [(ngModel)]="fish.LevelCode" name="LevelCode" type="number" min="1" class="form-control">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary">Save</button>
+        </div>
+      </form>
+    </div>
+</div>
+</div>
+</div>
