--- a/src/app/components/member-table/member-table.component.html
+++ b/src/app/components/member-table/member-table.component.html
@@ -1,68 +1,109 @@
-<div class="container table-responsive">
-  <table class="table align-middle table-bordered align-middle mb-0 bg-white">
-    <thead class="bg-light table-dark">
-    <tr>
-      <th>Member</th>
-      <th>Accession Date</th>
-      <th>Nationality</th>
-      <th>ID Type</th>
-      <th>Identity Number</th>
-      <th>Actions</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let member of members">
-      <td>
-        <div class="d-flex align-items-center">
-          <img src="https://mdbootstrap.com/img/new/avatars/8.jpg"
-            alt=""
-            style="width: 45px; height: 45px"
-            class="rounded-circle"/>
-          <div class="ms-3">
-            <p class="fw-bold mb-1">{{member.firstName}} {{member.lastName}}</p>
-            <p class="text-muted mb-0">Member Number : {{member.memberNumber}}</p>
-          </div>
-        </div>
-      </td>
-      <td>
-        <p class="fw-normal mb-1">{{member.accessionDate}}</p>
-      </td>
-      <td>
-        <p class="fw-normal mb-1">{{member.nationality}}</p>
-      </td>
-      <td>
-        <p class="fw-normal mb-1">{{member.identityDocument}}</p>
-      </td>
-      <td>
-        <p class="fw-normal mb-1">{{member.identityNumber}}</p>
-      </td>
-      <td>
-        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">
-          Register
-        </button>
-      </td>
-    </tr>
-    </tbody>
-  </table>
+<div class="container">
+  <div class="card shadow my-4">
+    <div class="card-header py-3 bg-dark d-flex align-items-center justify-content-between">
+      <h6 class="m-0 fw-bold text-light">Members</h6>
+      <button type="button" class="btn btn-primary fw-bold" data-bs-toggle="modal" data-bs-target="#memberModal">
+        Create Member
+      </button>
+    </div>
+    <div class="card-body">
+      <div class="table-responsive">
+        <table class="table align-middle table-bordered align-middle mb-0 bg-white">
+          <thead class="bg-light table-dark">
+            <tr>
+              <th scope="col" class="ps-3">Member</th>
+              <th scope="col" class="text-center">Accession Date</th>
+              <th scope="col" class="text-center">Nationality</th>
+              <th scope="col" class="text-center">ID Type</th>
+              <th scope="col" class="text-center">Identity Number</th>
+              <th scope="col" class="text-center">Action</th>
+            </tr>
+          </thead>
+          <tbody>
+          <tr *ngFor="let member of members">
+            <td>
+              <div class="d-flex align-items-center">
+                <img src="https://mdbootstrap.com/img/new/avatars/8.jpg"
+                     alt=""
+                     style="width: 45px; height: 45px"
+                     class="rounded-circle"/>
+                <div class="ms-3">
+                  <p class="fw-bold mb-1">{{member.firstName}} {{member.lastName}}</p>
+                  <p class="text-muted mb-0">Number : {{member.memberNumber}}</p>
+                </div>
+              </div>
+            </td>
+            <td class="text-center">
+              <p class="fw-normal mb-1">{{member.accessionDate}}</p>
+            </td>
+            <td class="text-center">
+              <p class="fw-normal mb-1">{{member.nationality}}</p>
+            </td>
+            <td class="text-center">
+              <p class="fw-normal mb-1">{{member.identityDocument}}</p>
+            </td>
+            <td class="text-center">
+              <p class="fw-normal mb-1">{{member.identityNumber}}</p>
+            </td>
+            <td class="d-flex justify-content-center">
+              <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Register
+              </button>
+            </td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+  </div>
 </div>
-<!-- Button trigger modal -->
 
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+<div class="modal fade" id="memberModal" tabindex="-1" aria-labelledby="memberModal" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">Member Modal</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <form (ngSubmit)="saveMember()">
+          <div class="row">
+              <div class="mb-3">
+                <label for="location-input">First Name</label>
+                <input type="text" [(ngModel)]="member.firstName"   name="firstName" class="form-control" id="first-name">
+              </div>
+              <div class="mb-3">
+                <label for="location-input">Location</label>
+                <input type="text" [(ngModel)]="member.lastName"  name="lastName" class="form-control" id="location-input">
+              </div>
+              <div class="mb-3">
+                <label for="amount-inputZip">Nationality</label>
+                <input type="text" [(ngModel)]="member.nationality" name="nationality" class="form-control" id="amount-inputZip">
+              </div>
+          </div>
+          <div class="row">
+            <div class="mb-3">
+              <label for="amount-inputZip">ID Type</label>
+              <select [(ngModel)]="identityDocument" name="identityDocument" class="form-select" aria-label="Default select example">
+                <option selected value="CIN">CIN</option>
+                <option value="RESIDENCE_CARD">RESIDENCE_CARD</option>
+                <option value="PASSPORT">PASSPORT</option>
+              </select>
+              </div>
+              <div class="mb-3">
+                <label for="location-input">Identity number</label>
+                <input type="text" [(ngModel)]="member.identityNumber"  name="identityNumber" class="form-control" id="identity-number">
+              </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary">Save</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
 </div>
+
