--- a/src/app/components/competition-table/competition-table.component.html
+++ b/src/app/components/competition-table/competition-table.component.html
@@ -1,4 +1,10 @@
 <div class="container">
+  <div *ngIf="errorMessages">
+    <div class="alert alert-danger alert-dismissible fade show my-4" *ngFor="let error of allErrors" role="alert" >
+      <strong>Error!</strong> {{error}}
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+  </div>
   <div class="card shadow my-4">
     <div class="card-header py-3 bg-dark d-flex align-items-center justify-content-between">
       <h6 class="m-0 fw-bold text-light">Competitions</h6>
@@ -53,7 +59,9 @@
       </table>
     </div>
     </div>
-
+        <mat-paginator [length]="totalCompetitions" [pageSize]="pageSize"
+                       [pageSizeOptions]="pageSizeOptions" (page)="onPageChange($event)">
+        </mat-paginator>
   </div>
 </div>
 
@@ -103,7 +111,7 @@
           </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="submit" class="btn btn-primary">Save</button>
+              <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Save</button>
             </div>
         </form>
       </div>
