--- a/src/app/components/fish-table/fish-table.component.html
+++ b/src/app/components/fish-table/fish-table.component.html
@@ -65,7 +65,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="submit" class="btn btn-primary">Save</button>
+          <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Save</button>
         </div>
       </form>
     </div>
